fix frame color version to ui color version on mobile quick nav

--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ body {
 	}
 
 	.qa {
-		background-color: aqua;
+		background-color: black;
 		display: flex;
 		width: 40%;
 		height: 379px;
